@@ -788,6 +788,7 @@ If you do find bugs, mail them to curl-bug@haxx.se.
  - Loic Dachary <loic@senga.org>
  - Robert Weaver <robert.weaver@sabre.com>
  - Ingo Ralf Blum <ingoralfblum@ingoralfblum.com>
+ - Jun-ichiro itojun Hagino <itojun@iijlab.net>
 
 .SH WWW
 http://curl.haxx.se
