@@ -20,8 +20,13 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: hostip.h,v 1.7 2001-01-05 10:11:42 bagder Exp $
+ * $Id: hostip.h,v 1.8 2001-02-05 23:04:44 bagder Exp $
  *****************************************************************************/
+
+struct addrinfo;
+struct addrinfo *Curl_getaddrinfo(struct UrlData *data,
+                             char *hostname,
+                             int port);
 
 struct hostent *Curl_gethost(struct UrlData *data,
                              char *hostname,
